--- a/src/tools/pd/templates/main.go.tmpl
+++ b/src/tools/pd/templates/main.go.tmpl
@@ -7,7 +7,7 @@ import (
 	"buffersnow.com/spiritonline/pkg/settings"
 	"buffersnow.com/spiritonline/pkg/version"
 
-	"buffersnow.com/spiritonline/internal/{{.ServiceLong}}/handlers"
+	"buffersnow.com/spiritonline/internal/{{.}}/handlers"
 
 	"github.com/luxploit/red"
 )
