[web/wfcnas] move from labstack/echo/v4 to go-fiber/v2 to use fasthttp

--- a/public/nastest.hbs
+++ b/public/nastest.hbs
@@ -1,11 +1,14 @@
-{{define "nastest"}}
 <html>
   <head>
     <title>WFC NAS - Server Test</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://cdn.spiritonline.net/favicon.ico"
+    />
   </head>
 
   <body>
     <h1>arf! ~ AuthServer is up</h1>
   </body>
 </html>
-{{end}}
